# Data_Mining

./: .gitignore  README.md
Group_3/: README.md  requirements.txt
Group_3/notebooks/: 01_EDA_image.ipynb
Lab_1/: pyproject.toml  requirements.txt
Lab_1/data/: processed_Image.txt  processed_Tabular.csv  raw_Image.txt  raw_Tablular.txt
Lab_1/data/Image/processed/: labels_remove_duplicate.csv
Lab_1/notebooks/Image/: 01_EDA_image_Dat.ipynb  02_preprocessing_image.ipynb  02_preprocessing_image_Dat.ipynb  02_preprocessing_image_Quy.ipynb  02_preprocessing_image_Quyen.ipynb
Lab_1/notebooks/Tabular/: 03_EDA_tabular.ipynb  04_preprocessing_tabular.ipynb  quyen_04_preprocessing_tabular.ipynb
Lab_1/notebooks/Text/: 05_text_preprocessing.ipynb  05_text_preprocessing_Bao.ipynb
Lab_1/src/: augmentation.py  dataloader.py  little_mcar.py  utils.py  visualize.py
Lab_2/tool/: README.md
